force-app/main/default/objects/SPEN_Premise__c/SPEN_Premise__c.object-meta.xml
<CustomObject>
    <description>Premise object has been set up to see all the Premise related information</description>
    <label>Premise</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Premises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>