force-app/main/default/objects/SPEN_Premise__c/fields/Local_Authority__c.field-meta.xml
<CustomField>
    <fullName>Local_Authority__c</fullName>
    <description>CRMD-9191</description>
    <label>Local Authority</label>
    <length>100</length>
    <type>Text</type>
</CustomField>