force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_AccountNumberMPAN__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AccountNumberMPAN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account number is look up with Account Number (MPAN) field of MPAN object</description>
    <label>Account Number (MPAN)</label>
    <referenceTo>SPEN_MPAN__c</referenceTo>
    <relationshipLabel>Premises</relationshipLabel>
    <relationshipName>Premises</relationshipName>
    <type>Lookup</type>
</CustomField>