force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_Area__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Area__c</fullName>
    <description>It takes the premise area</description>
    <label>Area</label>
    <length>200</length>
    <type>Text</type>
</CustomField>