force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_BuildingNameNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BuildingNameNumber__c</fullName>
    <externalId>true</externalId>
    <label>Building Name/Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>