force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_BuildingNameNumberSpace__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BuildingNameNumberSpace__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Removing spaced in SPEN_BuildingNameNumber__c field</description>
    <formula>SUBSTITUTE(SPEN_BuildingNameNumber__c, &quot; &quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Name/Number Space</label>
    <type>Text</type>
</CustomField>