force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_Button_Validation__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Button_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Button Validation</label>
    <type>Checkbox</type>
</CustomField>