force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_ChargesIndicator__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ChargesIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to show DUOS charges passed on to customer.</description>
    <label>Charges Indicator</label>
    <type>Checkbox</type>
</CustomField>