force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_Company__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Company__c</fullName>
    <description>Company associated with the contact</description>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>