force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_ConsentToShareDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ConsentToShareDate__c</fullName>
    <label>Consent To Share Date</label>
    <type>Date</type>
</CustomField>