force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_ConsentToSharePSRGiven__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ConsentToSharePSRGiven__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent To Share PSR Given</label>
    <type>Checkbox</type>
</CustomField>