force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_ConsentToShareSource__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ConsentToShareSource__c</fullName>
    <label>Consent To Share Source</label>
    <length>30</length>
    <type>Text</type>
</CustomField>