force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_CustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CustomerNumber__c</fullName>
    <label>Customer Number</label>
    <type>TextArea</type>
</CustomField>