force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_DCCServiceFlag__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DCCServiceFlag__c</fullName>
    <description>select the DCC service flag from list.</description>
    <label>DCC Service Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Installed Not Commissioned</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Non-Active</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>