force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_District__c.field-meta.xml
<CustomField>
    <fullName>SPEN_District__c</fullName>
    <formula>If(ISPICKVAL(SPEN_Zone__r.SPEN_Type__c, &apos;Zone&apos;), SPEN_Zone__r.SPEN_Parent__r.Name , &apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>District</label>
    <type>Text</type>
</CustomField>