force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ExternalId__c</fullName>
    <description>External Id field for any reference data</description>
    <label>ExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>