force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_FeederNo__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FeederNo__c</fullName>
    <description>Indicator to show which transformer the property in linked to</description>
    <label>Feeder No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>