force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_FlatNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FlatNumber__c</fullName>
    <description>It holds the premise flat number</description>
    <label>Flat Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>