force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_FullAddress__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FullAddress__c</fullName>
    <description>Flat Number + Building + Street + Area + Town + Post Code
(Combination of all other Premise Fields)</description>
    <formula>IF( NOT(ISBLANK(SPEN_PlotNumber__c)), SPEN_PlotNumber__c &amp;&quot; &quot;&amp; SPEN_FlatNumber__c &amp;&quot; &quot;&amp; SPEN_BuildingNameNumber__c &amp;&quot; &quot;&amp; SPEN_Street__c &amp;&quot; &quot; &amp;SPEN_Area__c &amp;&quot; &quot;&amp; SPEN_Town__c &amp;&quot; &quot;&amp; SPEN_PostCode__c, SPEN_FlatNumber__c &amp;&quot; &quot;&amp; SPEN_BuildingNameNumber__c &amp;&quot; &quot;&amp; SPEN_Street__c &amp;&quot; &quot; &amp;SPEN_Area__c &amp;&quot; &quot;&amp; SPEN_Town__c &amp;&quot; &quot;&amp; SPEN_PostCode__c)</formula>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>