force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_FusedNeutral__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FusedNeutral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked Fused is Neutral or not</description>
    <label>Fused Neutral</label>
    <type>Checkbox</type>
</CustomField>