force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_HVLV__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HVLV__c</fullName>
    <description>choose between HV and LV</description>
    <label>HV/LV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HV</fullName>
            </value>
            <value>
                <fullName>LV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>