force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_ImpactInformation__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ImpactInformation__c</fullName>
    <description>Indicator to show the impact of a power cut on customers.  For example, this will be things like for Commercial customers.
(power cut risk assessment)</description>
    <label>Impact Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>