force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_InternalMains__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InternalMains__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked or unchecked internal mains</description>
    <label>Internal Mains</label>
    <type>Checkbox</type>
</CustomField>