force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_LicenseArea__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LicenseArea__c</fullName>
    <description>It takes license details.</description>
    <label>License Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>