force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_LoadBalancer__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LoadBalancer__c</fullName>
    <description>Select load balancer type.</description>
    <label>Load Balancer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>