force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_LocalAuthority__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LocalAuthority__c</fullName>
    <description>Pick your local authority.</description>
    <label>Local Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ayrshire Council</fullName>
            </value>
            <value>
                <fullName>Ceredigion (Nr Aber)</fullName>
            </value>
            <value>
                <fullName>Cheshire East/West/Chester</fullName>
            </value>
            <value>
                <fullName>Clackmannan Council</fullName>
            </value>
            <value>
                <fullName>Dumfries Council</fullName>
            </value>
            <value>
                <fullName>East Dunbartonshire Council</fullName>
            </value>
            <value>
                <fullName>East Lothian Council</fullName>
            </value>
            <value>
                <fullName>Edinburgh Council</fullName>
            </value>
            <value>
                <fullName>Falkirk Council</fullName>
            </value>
            <value>
                <fullName>Fife Council</fullName>
            </value>
            <value>
                <fullName>Glasgow City Council</fullName>
            </value>
            <value>
                <fullName>Halton</fullName>
            </value>
            <value>
                <fullName>Knowsley</fullName>
            </value>
            <value>
                <fullName>Liverpool City</fullName>
            </value>
            <value>
                <fullName>Midlothian Council</fullName>
            </value>
            <value>
                <fullName>North Lanarkshire Council</fullName>
            </value>
            <value>
                <fullName>NORTH WALES EAST HUB</fullName>
            </value>
            <value>
                <fullName>NORTH WALES WEST HUB</fullName>
            </value>
            <value>
                <fullName>Northumberland County Council</fullName>
            </value>
            <value>
                <fullName>Renfrewshire Council / West Dumbartonshire</fullName>
            </value>
            <value>
                <fullName>Scottish Borders Council</fullName>
            </value>
            <value>
                <fullName>Shropshire</fullName>
            </value>
            <value>
                <fullName>South Lanarkshire Council</fullName>
            </value>
            <value>
                <fullName>St Helens</fullName>
            </value>
            <value>
                <fullName>Stirling Council</fullName>
            </value>
            <value>
                <fullName>Warrington</fullName>
            </value>
            <value>
                <fullName>West Lothian</fullName>
            </value>
            <value>
                <fullName>Wirral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>