force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_LoopedService__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LoopedService__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check the looped service</description>
    <label>Looped Service</label>
    <type>Checkbox</type>
</CustomField>