force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_LSOA__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LSOA__c</fullName>
    <description>CRMD-9191 : Backend field</description>
    <label>LSOA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>