force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_MPAN__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MPAN__c</fullName>
    <description>A text box to capture MPAN number to be sent to ADQM.</description>
    <label>MPAN</label>
    <length>25</length>
    <type>Text</type>
</CustomField>