force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_MPANNumberFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MPANNumberFormula__c</fullName>
    <formula>SPEN_AccountNumberMPAN__r.SPEN_AccountNumberMPAN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MPAN Number</label>
    <type>Text</type>
</CustomField>