force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_NewArea__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NewArea__c</fullName>
    <label>New Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>