force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_NewFlatNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NewFlatNumber__c</fullName>
    <label>New Flat number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>