force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_NewPostcode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NewPostcode__c</fullName>
    <label>New Postcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>