force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_NewPremiseName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NewPremiseName__c</fullName>
    <label>New Premise Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>