force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_NewPremiseNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NewPremiseNumber__c</fullName>
    <label>New Building Name/Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>