force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_NewStreet__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NewStreet__c</fullName>
    <label>New Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>