force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_NewTown__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NewTown__c</fullName>
    <label>New Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>