force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_OperatingZone__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OperatingZone__c</fullName>
    <description>Pick the operating Zone from picklist.</description>
    <label>Operating Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EHV South</fullName>
            </value>
            <value>
                <fullName>132KV SOUTH</fullName>
            </value>
            <value>
                <fullName>275kV SOUTH</fullName>
            </value>
            <value>
                <fullName>33KV SOUTH</fullName>
            </value>
            <value>
                <fullName>Dee Valley &amp; Oswestry</fullName>
            </value>
            <value>
                <fullName>DEE VALLEY NORTH</fullName>
            </value>
            <value>
                <fullName>DEE VALLEY SOUTH</fullName>
            </value>
            <value>
                <fullName>OSWESTRY NORTH</fullName>
            </value>
            <value>
                <fullName>OSWESTRY SOUTH</fullName>
            </value>
            <value>
                <fullName>Merseyside</fullName>
            </value>
            <value>
                <fullName>LIVERPOOL NORTH</fullName>
            </value>
            <value>
                <fullName>LIVERPOOL SOUTH</fullName>
            </value>
            <value>
                <fullName>ST HELENS</fullName>
            </value>
            <value>
                <fullName>WIDNES</fullName>
            </value>
            <value>
                <fullName>Mid Cheshire</fullName>
            </value>
            <value>
                <fullName>MID CHESHIRE NORTH</fullName>
            </value>
            <value>
                <fullName>MID CHESHIRE SOUTH</fullName>
            </value>
            <value>
                <fullName>WARRINGTON</fullName>
            </value>
            <value>
                <fullName>Mid Wales</fullName>
            </value>
            <value>
                <fullName>ABERYSTWYTH NORTH</fullName>
            </value>
            <value>
                <fullName>ABERYSTWYTH SOUTH</fullName>
            </value>
            <value>
                <fullName>NEWTOWN</fullName>
            </value>
            <value>
                <fullName>North Wales</fullName>
            </value>
            <value>
                <fullName>CLWYD EAST</fullName>
            </value>
            <value>
                <fullName>CLWYD WEST</fullName>
            </value>
            <value>
                <fullName>GWYNEDD ERYRI</fullName>
            </value>
            <value>
                <fullName>GWYNEDD MENAI</fullName>
            </value>
            <value>
                <fullName>Wirral</fullName>
            </value>
            <value>
                <fullName>CHESTER</fullName>
            </value>
            <value>
                <fullName>ELLESMERE PORT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>