force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_OutstandingIssuesWorkIndicator__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OutstandingIssuesWorkIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if it is Outstanding issues/work indicator.</description>
    <label>Outstanding Issues/Work Indicator</label>
    <type>Checkbox</type>
</CustomField>