force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_PlotNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PlotNumber__c</fullName>
    <label>Plot Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>