force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_Position__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Position__c</fullName>
    <description>Hold position of of the contact.</description>
    <label>Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>