force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_PostCode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PostCode__c</fullName>
    <description>It takes the premise postal code</description>
    <externalId>true</externalId>
    <label>Post Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>