force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_PowerCutSupportHistory__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PowerCutSupportHistory__c</fullName>
    <description>Contains the power cut support history</description>
    <label>Power Cut Support History</label>
    <length>255</length>
    <type>Text</type>
</CustomField>