force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_PremiseDistrict__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PremiseDistrict__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>21.6.23: as aligned with Lauren in context of CRMD-430: this field is not in use at all in PROD (populated for 5 records only) --&gt; NO LONGER RELEVANT &amp; candidate for deletion.</description>
    <label>District</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SPEN_Zone__c.SPEN_Type__c</field>
            <operation>equals</operation>
            <value>District</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>SPEN_Zone__c</referenceTo>
    <relationshipLabel>Premises (District)</relationshipLabel>
    <relationshipName>Premises1</relationshipName>
    <type>Lookup</type>
</CustomField>