force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_PremiseID__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PremiseID__c</fullName>
    <description>Unique SPEN identifier for a premise</description>
    <externalId>true</externalId>
    <label>Premise ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>