force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_PremiseName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PremiseName__c</fullName>
    <description>It takes premise name for premise object.</description>
    <label>Premise Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>