force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_PremiseNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PremiseNumber__c</fullName>
    <description>The identifying number (if known) for the property affected. If empty the new call will have 0 as it&apos;s property number</description>
    <label>Premise Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>