force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_PrivateNetworksIndicator__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PrivateNetworksIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check is it private network or not.</description>
    <label>Private Networks Indicator</label>
    <type>Checkbox</type>
</CustomField>