force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_ResponsibleDistrict__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ResponsibleDistrict__c</fullName>
    <description>Pick the responsible district</description>
    <label>Responsible District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ayrshire &amp; Clyde South</fullName>
            </value>
            <value>
                <fullName>Central &amp; Fife</fullName>
            </value>
            <value>
                <fullName>Dee Valley / Mid Wales Oswestry</fullName>
            </value>
            <value>
                <fullName>Dumfries</fullName>
            </value>
            <value>
                <fullName>Edinburgh &amp; Borders</fullName>
            </value>
            <value>
                <fullName>Glasgow &amp; Clyde North</fullName>
            </value>
            <value>
                <fullName>Lanarkshire</fullName>
            </value>
            <value>
                <fullName>Merseyside</fullName>
            </value>
            <value>
                <fullName>Mid Cheshire</fullName>
            </value>
            <value>
                <fullName>North Wales</fullName>
            </value>
            <value>
                <fullName>Wirral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>