force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_SiteNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SiteNumber__c</fullName>
    <description>It takes the premise site number.</description>
    <label>Site Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>