force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_SpecialAccess__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SpecialAccess__c</fullName>
    <description>Provide any special access details logged against the premise</description>
    <label>Special Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>