force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_Street__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Street__c</fullName>
    <description>It hold the premise street name.</description>
    <externalId>true</externalId>
    <label>Street</label>
    <length>200</length>
    <type>Text</type>
</CustomField>