force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_SubmitAmendedCustomer_Details__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SubmitAmendedCustomer_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Submits customer related updates to ADQM (in relation to address fields only) - mailbox only, not an automated update</description>
    <label>Submit Amended Customer Details</label>
    <type>Checkbox</type>
</CustomField>