force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_SubstationENID__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SubstationENID__c</fullName>
    <label>Substation ENID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>