force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_SubstationName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SubstationName__c</fullName>
    <externalId>true</externalId>
    <label>Substation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>