force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_SubstationTXLink__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SubstationTXLink__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Indicator to show which transformer the property in linked to</description>
    <label>TX ENID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>