force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_Town__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Town__c</fullName>
    <description>It takes the premise town</description>
    <externalId>true</externalId>
    <label>Town</label>
    <length>200</length>
    <type>Text</type>
</CustomField>