force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Type__c</fullName>
    <description>Select type from dropdown list.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Unmetered Supply</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Generators- HV/LV</fullName>
                <isActive>false</isActive>
                <label>Generators- HV/LV</label>
            </value>
            <value>
                <fullName>Generators- Renewable</fullName>
                <isActive>false</isActive>
                <label>Generators- Renewable</label>
            </value>
            <value>
                <fullName>Generators- Traditional</fullName>
                <isActive>false</isActive>
                <label>Generators- Traditional</label>
            </value>
            <value>
                <fullName>Large Business</fullName>
                <isActive>false</isActive>
                <label>Large Business</label>
            </value>
            <value>
                <fullName>Small Business</fullName>
                <isActive>false</isActive>
                <label>Small Business</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>