force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_UPRN__c.field-meta.xml
<CustomField>
    <fullName>SPEN_UPRN__c</fullName>
    <description>Unique Property Registration Number - unique UK wide identifier, regardless of undustry supported by Royal Mail and Ordnance Survey</description>
    <label>UPRN</label>
    <length>12</length>
    <type>Text</type>
</CustomField>