force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_XCoOrdinate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_XCoOrdinate__c</fullName>
    <description>Takes X co-ordinate of the premise</description>
    <label>X Co-Ordinate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>