force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_YCoOrdinate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_YCoOrdinate__c</fullName>
    <description>Takes Y Co-ordinate of the premise</description>
    <label>Y Co-Ordinate</label>
    <length>16</length>
    <type>Text</type>
</CustomField>