force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_Zone__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Zone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SPEN_Zone__c.SPEN_Type__c</field>
            <operation>equals</operation>
            <value>Zone</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SPEN_Zone__c</referenceTo>
    <relationshipLabel>Premises</relationshipLabel>
    <relationshipName>Premises</relationshipName>
    <type>Lookup</type>
</CustomField>