force-app/main/default/objects/SPEN_Premise__c/fields/SPEN_ZoneLicenseArea__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ZoneLicenseArea__c</fullName>
    <formula>SPEN_Zone__r.SPEN_ZoneRegionFormula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone License Area</label>
    <type>Text</type>
</CustomField>