force-app/main/default/objects/SPEN_Premise__c/recordTypes/SPEN_Premise.recordType-meta.xml
<RecordType>
    <fullName>SPEN_Premise</fullName>
    <active>true</active>
    <description>Create new record type for SPEN Premise</description>
    <label>SPEN Premise</label>
</RecordType>