force-app/main/default/objects/SPEN_Premise__c/recordTypes/SPEN_PremiseConnectionsCRM.recordType-meta.xml
<RecordType>
    <fullName>SPEN_PremiseConnectionsCRM</fullName>
    <active>true</active>
    <description>This record type is for Connections process</description>
    <label>SPEN Premise Connections CRM</label>
</RecordType>