force-app/main/default/objects/SPEN_Premise__c/validationRules/SPEN_PremiseIDValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_PremiseIDValidation</fullName>
    <active>true</active>
    <description>Premise ID, Postcode, Name can&apos;t change by Agent,Team Lead, manager.</description>
    <errorConditionFormula>(ISCHANGED(SPEN_PremiseID__c) ||  ISCHANGED( SPEN_PostCode__c ) ||  ISCHANGED( Name ))  &amp;&amp;  ($Profile.Name  &lt;&gt; &apos;System Administrator&apos;  &amp;&amp;  $Profile.Name  &lt;&gt; &apos;SPEN Integration&apos;)</errorConditionFormula>
    <errorMessage>You don&apos;t have Sufficient Permission to Change.</errorMessage>
</ValidationRule>