force-app/main/default/objects/SPEN_Premise__c/validationRules/SPEN_PremiseNameOrNumberValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_PremiseNameOrNumberValidation</fullName>
    <active>false</active>
    <description>It check any of one cann&apos;t be blank; Causing error in ADQM sync - setting to inactive - Macjules</description>
    <errorConditionFormula>AND(ISBLANK(SPEN_PremiseName__c), ISBLANK(SPEN_PremiseNumber__c))</errorConditionFormula>
    <errorMessage>Please fill Premise Name or Premise Number</errorMessage>
</ValidationRule>