force-app/main/default/objects/SPEN_Premise__c/validationRules/UPRN_Only_Numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>UPRN_Only_Numeric</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(SPEN_UPRN__c),ISNUMBER(SPEN_UPRN__c))</errorConditionFormula>
    <errorMessage>Only numeric values are allowed for UPRN</errorMessage>
</ValidationRule>