force-app/main/default/objects/SPEN_Premise__c/validationRules/X_CoOrdinate.validationRule-meta.xml
<ValidationRule>
    <fullName>X_CoOrdinate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK( SPEN_XCoOrdinate__c ),ISNUMBER( SPEN_XCoOrdinate__c ))</errorConditionFormula>
    <errorMessage>Only numeric values are allowed for X Co-Ordinate</errorMessage>
</ValidationRule>