force-app/main/default/objects/SPEN_Premise__c/validationRules/Y_CoOrdinate.validationRule-meta.xml
<ValidationRule>
    <fullName>Y_CoOrdinate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(   SPEN_YCoOrdinate__c ),ISNUMBER(  SPEN_YCoOrdinate__c ))</errorConditionFormula>
    <errorMessage>Only numeric values are allowed for Y Co-Ordinate</errorMessage>
</ValidationRule>