force-app/main/default/objects/SPEN_Premise__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_PremiseID__c</columns>
    <columns>SPEN_FlatNumber__c</columns>
    <columns>SPEN_BuildingNameNumber__c</columns>
    <columns>SPEN_Street__c</columns>
    <columns>SPEN_Area__c</columns>
    <columns>SPEN_Town__c</columns>
    <columns>SPEN_PostCode__c</columns>
    <columns>SPEN_Zone__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>SPEN_MPAN__c</columns>
    <columns>SPEN_MPANNumberFormula__c</columns>
    <columns>SPEN_District__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>